syntax = "proto3";

package productrpc;
option go_package = "./productrpc";

// Ping request/response
message Request {
	string ping = 1;
}

message Response {
	string pong = 1;
}

// 商品相关
message GetProductReq {
	int64 id = 1;
}

message GetProductResp {
	int64 id = 1;
	string name = 2;
	string description = 3;
	int64 price = 4;
	int32 status = 5;
	int64 category_id = 6;
	int64 stock = 7;
	repeated string images = 8;
	int64 created_at = 9;
	int64 updated_at = 10;
}

service ProductRpc {
	rpc Ping(Request) returns (Response);

	// 根据 ID 查询商品详情
	rpc GetProduct(GetProductReq) returns (GetProductResp);
}